--- a/_includes/index.html
+++ b/_includes/index.html
@@ -99,7 +99,7 @@
       <img src="/assets/images/findings.png" alt="" />
     </div>
     <div class="card-footer border-b border-r">
-      <h3>{{t.funding}}</h3>
+      <h3>{{t.fundings}}</h3>
     </div>
   </div>
 </div>
