--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,6 @@
 ---
 ---
+
 @import "global";
 
 .acc-home {
@@ -248,7 +249,7 @@
         }
 
         h4 {
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 700;
             line-height: 18px;
             letter-spacing: 2px;
@@ -390,6 +391,7 @@
 
     @media (min-width: $mobile_screen) {
         border: 2px solid $black;
+        border-left: none;
         bottom: 0;
         left: 0;
     }
@@ -710,6 +712,18 @@
                 padding: 0 20px !important;
             }
         }
+        .scroll-to-top {
+            height: 120px;
+            width: 120px;
+            background-color: $white;
+            border: 2px solid $black;
+            position: absolute;
+            right: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+        }
 
         .container.label {
             padding: 0 30px !important;
@@ -747,7 +761,8 @@
                 content: "";
                 height: 100%;
                 position: absolute;
-                background-color: rgba(250, 2, 255, 0.15);
+                background-color: #f1f1f1;
+                opacity: 0.3;
                 left: 0;
                 top: 0;
                 height: 100%;
@@ -848,7 +863,7 @@
                     min-height: 120px;
 
                     h3 {
-                        font-size: 14px;
+                        font-size: 16px;
                         font-weight: 700;
                         text-transform: uppercase;
                         margin-bottom: 16px;
@@ -896,9 +911,10 @@
 
                         h3 {
                             margin-bottom: 30px;
-                            font-size: 32px;
-                            letter-spacing: 4px;
+                            font-size: 16px;
+                            letter-spacing: 1px;
                             line-height: 40px;
+                            font-weight: bold;
                         }
 
                         p {
@@ -925,7 +941,7 @@
     padding: 30px 0;
 
     .description {
-        font-size: 16px;
+        font-size: 18px;
         line-height: 24px;
         margin-top: 20px;
         margin-bottom: 30px;
@@ -1571,12 +1587,14 @@
 
     a.member,
     p.member {
-        font-size: 32px;
+        font-size: 16px;
         line-height: 50px;
         color: $black;
         display: block;
         margin-bottom: 16px;
         height: 50px;
+        letter-spacing: 1px;
+        font-weight: 700;
     }
 
     a.link,
@@ -1584,7 +1602,7 @@
         font-size: 16px;
         line-height: 24px;
         font-weight: 700;
-        letter-spacing: 2px;
+        letter-spacing: 1px;
         text-transform: uppercase;
         color: $black;
         height: 50px;
@@ -1616,13 +1634,13 @@
             font-size: 24px;
             font-weight: 700;
             line-height: 36px;
-            letter-spacing: 1px;
+            letter-spacing: 0px;
         }
 
         p {
             font-weight: 400;
             display: block;
-            margin-top: 12px;
+            // margin-top: 12px;
 
             &:nth-of-type(1) {
                 margin-top: 0;
@@ -1649,18 +1667,21 @@
 
             h3 {
                 min-height: 88px;
+                font-size: 16px !important;
+                font-weight: 700;
+                letter-spacing: 2px;
             }
 
             h3,
             p {
-                font-size: 32px;
-                line-height: 50px;
+                line-height: 160%
             }
 
             p {
                 font-weight: 400;
-                margin-top: 24px;
-
+                // margin-top: 24px;
+                font-size: 18px;
+                letter-spacing: 0px;
                 span {
                     font-size: 20px;
                 }
@@ -1687,8 +1708,8 @@
 
         .description {
             margin: 80px 0;
-            font-size: 32px;
-            line-height: 50px;
+            font-size: 18px;
+            line-height: 160%;
         }
         .service-wrapper {
             background-color: $primary;
