added eng/fr texts, new projects, updated images

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -78,12 +78,12 @@
         <p>{{t.discover}}</p>
       </div>
       <!-- Assuming 6 images, 3 in each row for card1 -->
-      <img src="/assets/images/team/1.png" alt="" />
-      <img src="/assets/images/team/2.png" alt="" />
-      <img src="/assets/images/team/3.png" alt="" />
-      <img src="/assets/images/team/4.png" alt="" />
-      <img src="/assets/images/team/5.png" alt="" />
-      <img src="/assets/images/team/6.png" alt="" />
+      <img src="/assets/images/team/Catherine_Guastavino-RC3_Square.jpg" alt="" />
+      <img src="/assets/images/team/Joseepic2.jpg" alt="" />
+      <img src="/assets/images/team/Nicola.jpg" alt="" />
+      <img src="/assets/images/team/Cynthia_Tarlao-RC3red-square.jpg" alt="" />
+      <img src="/assets/images/team/Edda-Bild.jpg" alt="" />
+      <img src="/assets/images/team/Chris_Trudeau.jpg" alt="" />
     </div>
     <div class="card-footer border-t border-l">
       <h3>{{t.who}}</h3>
