updated soundscape page, fixed styling

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -79,11 +79,14 @@
       </div>
       <!-- Assuming 6 images, 3 in each row for card1 -->
       <img src="/assets/images/team/Catherine_Guastavino-RC3_Square.jpg" alt="" />
-      <img src="/assets/images/team/Joseepic2.jpg" alt="" />
-      <img src="/assets/images/team/Nicola.jpg" alt="" />
-      <img src="/assets/images/team/Cynthia_Tarlao-RC3red-square.jpg" alt="" />
       <img src="/assets/images/team/Edda-Bild.jpg" alt="" />
+      <img src="/assets/images/team/Joseepic2.jpg" alt="" />
+      <img src="/assets/images/team/Valerian-Fraisse.jpg" alt="" />
+      <img src="/assets/images/team/DanSteele.jpg" alt="" />
+      <img src="/assets/images/team/Cynthia_Tarlao-RC3red-square.jpg" alt="" />
       <img src="/assets/images/team/Chris_Trudeau.jpg" alt="" />
+      <img src="/assets/images/team/richard2_small.jpg" alt="" />
+
     </div>
     <div class="card-footer border-t border-l">
       <h3>{{t.who}}</h3>
@@ -99,7 +102,7 @@
       <img src="/assets/images/findings.png" alt="" />
     </div>
     <div class="card-footer border-b border-r">
-      <h3>{{t.fundings}}</h3>
+      <h3>{{t.funding}}</h3>
     </div>
   </div>
 </div>
