--- a/_includes/events.html
+++ b/_includes/events.html
@@ -5,7 +5,7 @@
       <p class="text-link">{{t.description}}</p>
     </div>
     <form class="searchbar" id="searchForm">
-      <input type="text" id="searchInput" />
+      <input type="text" id="searchInput" placeholder="Search"/>
       <div class="icon" id="searchIcon">
         <svg
           width="54"
