--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -382,6 +382,7 @@ body {
   .container {
     padding: 0 20px;
   }
+
   .player-container {
     padding: 0 20px;
   }
@@ -408,9 +409,11 @@ body {
     justify-content: center;
     border-right: 2px solid $black;
     border-bottom: 2px solid $black;
+
     &.black {
       background-color: $black;
       flex-direction: column;
+
       h4 {
         font-weight: 700;
         font-size: 14px;
@@ -421,6 +424,7 @@ body {
         letter-spacing: 2px;
         margin-bottom: 12px;
       }
+
       p {
         display: block;
         text-align: center;
@@ -436,6 +440,7 @@ body {
 
   .slider {
     width: 100%;
+
     &.bordered {
       border-top: 2px solid $black;
     }
@@ -457,6 +462,7 @@ body {
     .logo-text {
       height: 622px;
       width: 33.33%;
+
       h4 {
         font-size: 16px;
       }
@@ -474,7 +480,7 @@ body {
 
 /* ACCORDIONS STYLES STARTS HERE*/
 .accordions {
-  p.desc{
+  p.desc {
     text-align: left;
   }
 
@@ -532,6 +538,7 @@ body {
       &:hover {
         .icon {
           background-color: $black;
+
           &::after,
           &:before {
             background-color: $white;
@@ -809,73 +816,74 @@ body {
   padding: 30px 0;
 
   @media (min-width: $mobile_screen) {
-      padding: 80px 0;
+    padding: 80px 0;
   }
 }
+
 .searchbar {
   position: relative;
   width: 100%;
   max-width: 660px;
 
   input {
-      position: relative;
-      height: 60px;
-      width: 100%;
-      max-width: 660px;
-      padding: 16px 80px 16px 20px;
-      border: 2px solid $black;
-      font-size: 18px;
-      outline: none;
-      color: #A5A5A5;
-      font-style: italic;
-      font-family: 'Lato';
+    position: relative;
+    height: 60px;
+    width: 100%;
+    max-width: 660px;
+    padding: 16px 80px 16px 20px;
+    border: 2px solid $black;
+    font-size: 18px;
+    outline: none;
+    color: #A5A5A5;
+    font-style: italic;
+    font-family: 'Lato';
 
-      &:focus,
-      &:active {
-          outline: none;
-      }
+    &:focus,
+    &:active {
+      outline: none;
+    }
   }
 
   .icon {
-      position: absolute;
-      height: 60px;
-      width: 60px;
-      right: 0;
-      top: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-left: 2px solid $black;
-      color: $black;
-      cursor: pointer;
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    right: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 2px solid $black;
+    color: $black;
+    cursor: pointer;
 
-      svg {
-          height: 30px;
-      }
+    svg {
+      height: 30px;
+    }
   }
 
   @media (min-width: $mobile_screen) {
-      input {
-          font-size: 32px;
-          height: 80px;
-          padding: 16px 160px 16px 40px;
-      }
+    input {
+      font-size: 32px;
+      height: 80px;
+      padding: 16px 160px 16px 40px;
+    }
 
-      .icon {
-          height: 80px;
-          width: 80px;
+    .icon {
+      height: 80px;
+      width: 80px;
 
-          svg {
-              height: 40px;
-          }
+      svg {
+        height: 40px;
       }
+    }
   }
 
   &:hover {
-      .icon {
-          background-color: $black;
-          color: $white;
-      }
+    .icon {
+      background-color: $black;
+      color: $white;
+    }
   }
 }
 
@@ -886,11 +894,11 @@ body {
   margin-bottom: 30px;
 
   &.space-t {
-      margin-top: 20px;
+    margin-top: 20px;
   }
 
   @media (min-width: $mobile_screen) {
-      margin-bottom: 80px;
+    margin-bottom: 80px;
   }
 }
 
@@ -900,6 +908,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+
 .team-card {
   position: relative;
   overflow: hidden;
@@ -911,17 +920,21 @@ body {
   @media (min-width: $mobile_screen) {
     max-width: 50%;
     min-width: 50%;
-    &:nth-of-type(2n+1){
+
+    &:nth-of-type(2n+1) {
       border-right: 0;
     }
   }
+
   &:hover {
     .overlay {
       opacity: 1;
     }
   }
+
   .media {
     position: relative;
+
     img {
       width: 100%;
       height: 100%;
@@ -929,11 +942,14 @@ body {
       border-bottom: 2px solid $black;
       object-fit: cover;
     }
+
     height: auto;
+
     @media (min-width: $mobile_screen) {
       height: 374px;
     }
   }
+
   .content {
     min-height: 80px;
     padding: 36px;
@@ -941,6 +957,7 @@ body {
     z-index: 0;
     background-color: $white;
   }
+
   .overlay {
     padding: 36px;
     position: absolute;
@@ -956,40 +973,47 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
+    overflow-y: scroll;
     max-height: 360px;
     @media (min-width: $mobile_screen) {
       max-height: 390px;
     }
   }
+
   h3 {
     font-size: 24px;
     font-weight: 700;
     line-height: 32px;
     letter-spacing: 1px;
   }
+
   i {
     font-size: 12px;
     line-height: 18px;
   }
+
   p {
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 24px;
   }
+
   @media (min-width: $mobile_screen) {
     h3 {
       font-size: 20px;
       line-height: 40px;
     }
+
     i {
       font-size: 14px;
       line-height: 24px;
     }
+
     p {
       font-size: 20px;
       line-height: 32px;
     }
   }
 }
+
 /* TEAM CARD STYLES END'S HERE */
