updated search tag functionality

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -793,13 +793,30 @@ body {
   color: $white;
   text-transform: uppercase;
   font-weight: 700;
+  border: 2px black solid;
+
+  &.active {
+    background-color: $black;
+  }
+
+  &.disabled {
+    background-color: $white;
+    color: $black;
+
+    .x-icon {
+        color: gray;
+        pointer-events: none;
+        cursor: default;
+      }
+  }
 
   .x-icon {
     font-size: 18px;
     cursor: pointer;
+
   }
 
-  @media (min-width:$mobile_screen) {
+  @media (min-width: $mobile_screen) {
     height: 60px;
     padding: 12px 30px;
     font-size: 14px;
