added projects, fixed soundscape page

--- a/_includes/soundscape.html
+++ b/_includes/soundscape.html
@@ -72,29 +72,25 @@
         <div class="step">
           <h3 class="title">1</h3>
           <p class="info">
-            Second worst environmental risk factor (after air pollution)
-            according to the World Health Organization.
+            1 in 5 people are highly annoyed with noise.
           </p>
         </div>
         <div class="step">
           <h3 class="title">2</h3>
           <p class="info">
-            Second worst environmental risk factor (after air pollution)
-            according to the World Health Organization.
+            Noise is the second worst environmental risk factor (after air pollution).
           </p>
         </div>
         <div class="step">
           <h3 class="title">3</h3>
           <p class="info">
-            Second worst environmental risk factor (after air pollution)
-            according to the World Health Organization.
+            Quality sound environments can help relieve stress.
           </p>
         </div>
         <div class="step">
           <h3 class="title">4</h3>
           <p class="info">
-            Second worst environmental risk factor (after air pollution)
-            according to the World Health Organization.
+            Sound can animate public space.
           </p>
         </div>
       </div>
