--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -49,7 +49,7 @@
       {% elsif item.submenu %}
         <ul class="sub-menu">
           {% for subitem in item.submenu %}
-          <li class="sub-menu-item">
+          <li class="menu-item">
             <a href="/{{ lang }}{{ subitem.url }}" class="text-link menu-link-2">
               {{ subitem.title }}
               <img alt="arrow" class="icon-white" src="/assets/images/icons/arrow-tilt-white.svg" />
