--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -734,6 +734,10 @@
                     line-height: 26px;
                     margin-top: 12px;
                 }
+                
+                flex-grow: 1;
+                flex-shrink: 1;
+                flex-basis: 0;
             }
 
             @media (min-width: $mobile_screen) {
