--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -625,6 +625,7 @@
                 font-weight: $title-font-weight;
                 margin-bottom: $card-padding;
                 letter-spacing: 2px;
+                text-transform: uppercase;
             }
 
             .card-divider {
@@ -734,7 +735,7 @@
                     line-height: 26px;
                     margin-top: 12px;
                 }
-                
+
                 flex-grow: 1;
                 flex-shrink: 1;
                 flex-basis: 0;
