fixed home page changes

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -73,10 +73,12 @@
 <div id="team">
   <div class="card" id="card1">
     <div class="images">
+      <a href="./about.html">
       <div class="overlay">
         <img src="/assets//images/icons/eye.svg" alt="" class="icon" />
         <p>{{t.discover}}</p>
       </div>
+      </a>
       <!-- Assuming 6 images, 3 in each row for card1 -->
       <img src="/assets/images/team/Catherine_Guastavino-RC3_Square.jpg" alt="" />
       <img src="/assets/images/team/Edda-Bild.jpg" alt="" />
@@ -88,6 +90,7 @@
       <img src="/assets/images/team/richard2_small.jpg" alt="" />
 
     </div>
+    
     <div class="card-footer border-t border-l">
       <h3>{{t.who}}</h3>
       <p>{{t.meet}}</p>
@@ -95,10 +98,12 @@
   </div>
   <div class="card border-l" id="card2">
     <div class="images">
+      <a href="./partners.html">
       <div class="overlay">
         <img src="/assets/images/icons/eye.svg" alt="" class="icon" />
         <p>{{t.view}}</p>
       </div>
+      </a>
       <img src="/assets/images/findings.png" alt="" />
     </div>
     <div class="card-footer border-b border-r">
