--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -7,9 +7,9 @@
         {% for link in city.links %}
         <p>
             {% if link.url %}
-                <a href="{{ link.url }}" >{{ link.name }}</a><span>{{link.language}}</span>
+                <a href="{{ link.url }}" >{{ link.name }}</a><span>&nbsp{{link.language}}</span>
             {% else %}
-                {{ link.name }}<span>{{link.language}}</span>
+                {{ link.name }}<span>&nbsp{{link.language}}</span>
             {% endif %}
         </p>
         {%endfor%}
@@ -20,9 +20,9 @@
         {% for link in organization.links %}
         <p>
             {% if link.url %}
-                <a href="{{ link.url }}" >{{ link.name }}</a><span>{{link.language}}</span>
+                <a href="{{ link.url }}" >{{ link.name }}</a><span>&nbsp{{link.language}}</span>
             {% else %}
-                {{ link.name }}<span>{{link.language}}</span>
+                {{ link.name }}<span>&nbsp{{link.language}}</span>
             {% endif %}
         </p>
         {%endfor%}
@@ -33,9 +33,9 @@
         {% for link in funding.links %}
         <p>
             {% if link.url %}
-                <a href="{{ link.url }}" >{{ link.name }}</a><span>{{link.language}}</span>
+                <a href="{{ link.url }}" >{{ link.name }}</a><span>&nbsp{{link.language}}</span>
             {% else %}
-                {{ link.name }}<span>{{link.language}}</span>
+                {{ link.name }}<span>&nbsp{{link.language}}</span>
             {% endif %}
         </p>
         {%endfor%}
