--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,7 +29,7 @@
     {% assign projects = site.data.projects[lang] %}
     {% for item in navigation %}
     <li class="menu-item item-main">
-      <a href="/{{ lang }}{{ item.url }}" class="heading menu-link">
+      <a href="/{{ lang }}{{ item.url }}" class="heading menu-link menu-hover">
         {{ item.title }}
         <img alt="arrow" class="icon-white" src="/assets/images/icons/arrow-tilt-white.svg" />
         <img alt="arrow" class="icon-black" src="/assets/images/icons/arrow-tilt.svg" />
@@ -38,7 +38,7 @@
         <ul class="sub-menu">
           {% for project in projects %}
           <li class="menu-item">
-            <a href="/{{ lang }}/projects/{{ project.url }}" class="text-link menu-link-2">
+            <a href="/{{ lang }}/projects/{{ project.url }}" class="text-link menu-link-2 menu-hover">
               {{ project.title }}
               <img alt="arrow" class="icon-white" src="/assets/images/icons/arrow-tilt-white.svg" />
               <img alt="arrow" class="icon-black" src="/assets/images/icons/arrow-tilt.svg" />
@@ -50,7 +50,7 @@
         <ul class="sub-menu">
           {% for subitem in item.submenu %}
           <li class="menu-item">
-            <a href="/{{ lang }}{{ subitem.url }}" class="text-link menu-link-2">
+            <a href="/{{ lang }}{{ subitem.url }}" class="text-link menu-link-2 menu-hover">
               {{ subitem.title }}
               <img alt="arrow" class="icon-white" src="/assets/images/icons/arrow-tilt-white.svg" />
               <img alt="arrow" class="icon-black" src="/assets/images/icons/arrow-tilt.svg" />
