--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1787,6 +1787,7 @@
             margin: 80px 0;
             font-size: 18px;
             line-height: 160%;
+            max-width: 800px;
         }
         .service-wrapper {
             background-color: $primary;
