updated texts on home, soundscape. styling changes on about us and slide. updated services page styling and french text

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <div id="banner">
-    <div class="logo-text black">
+    <div class="logo-text services black">
       <h4>{{t.difference}}</h4>
       <p class="heading">{{t.sound}}</p>
     </div>
