--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -461,6 +461,13 @@ body {
         font-size: 16px;
       }
     }
+    .logo-text.services {
+      height: 624px;
+      width: 33.33%
+      h4 {
+        font-size: 16px;
+      }
+    }
 
     .slider {
       width: 66.66%;
