translated search placeholder and tags. fixed project tags.

--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -5,7 +5,7 @@
       <p class="text-link" >{{t.description}}</p>
     </div>
     <form class="searchbar" id="searchForm">
-      <input type="text" id="searchInput" placeholder="Search"/>
+      <input type="text" id="searchInput" placeholder="{{t.placeholder}}"/>
       <div class="icon" id="searchIcon" >
         <svg
           width="54"
