--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
       <h2 class="title heading">{{ t.title }}</h2>
     </div>
     <form class="searchbar" id="searchForm">
-      <input type="text" id="searchInput" placeholder="Search" />
+      <input type="text" id="searchInput" placeholder="{{ t.placeholder}}" />
       <div class="icon" id="searchIcon">
         <svg width="54" height="62" viewBox="0 0 54 62" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="31" cy="23" r="22" fill="translate" stroke="currentColor" stroke-width="2" />
