Updates to events and blogs for external links, update to README

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -72,7 +72,7 @@
                 </div>
                 <p class="text">
                   {{event.about}} <br /><br />{{t.info}}:
-                  <a href="#">{{event.link}}</a>
+                  <a href="{{event.link}}" target="_blank">{{event.link}}</a>
                 </p>
               </div>
             </div>
