--- a/_layouts/blog_details.html
+++ b/_layouts/blog_details.html
@@ -55,7 +55,7 @@
           <p class="text">{{page.brief}}</p>
           <p class="text">
             <br><br>
-            {{content.for_details}}: <a href="#">{{page.link}}</a>
+            {{content.for_details}}: <a href="{{page.link}}" target="_blank">{{page.link}}</a>
           </p>
         </div>
       </div>
