Fix purple visited link, fix h2 on homepage

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -43,10 +43,10 @@
 <div id="info">
   <div class="container">
     <div class="info-wrapper">
-      <h2>
+      <h1 class="heading">
         {{ t.cities }} <br />
         {{ t.sound }}
-      </h2>
+      </h1>
       <h4>{{t.notbad}}</h4>
       <p>{{t.description}}</p>
     </div>
