--- a/_includes/index.html
+++ b/_includes/index.html
@@ -6,10 +6,14 @@
     <div class="slider1" id="slider1">
       {% for slide in t.slides %}
       <div class="slide">
-        <img src="{{slide.image}}" alt="{{slide.title}}" />
+        <a href="{{slide.url}}">
+          <img src="{{slide.image}}" alt="{{slide.title}}" />
+        </a>
         <div class="slide-content">
-          <h2>{{slide.title}}</h2>
-          <p>{{slide.description}}</p>
+          <a class="slider-links" href="{{slide.url}}">
+            <h2>{{slide.title}}</h2>
+            <p>{{slide.description}}</p>
+          </a>
         </div>
       </div>
       {%endfor%}
