changing box on right to projects

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -95,7 +95,7 @@
   </div>
   <div class="card border-l" id="card2">
     <div class="images">
-      <a href="./partners.html">
+      <a href="./projects/">
       <div class="overlay">
         <img src="/assets/images/icons/eye.svg" alt="" class="icon" />
         <p>{{t.view}}</p>
