services accordion text too small

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,6 +23,8 @@
         max-width: 100%;
         width: 100%;
         flex-wrap: nowrap;
+        font-size: 20px;
+        line-height: 32px;
 
         p {
             padding: 0 36px;
